[gd_scene load_steps=7 format=2]

[ext_resource path="res://textures_&_sprites/bubbled_powerup.png" type="Texture" id=1]
[ext_resource path="res://powerup.gd" type="Script" id=2]
[ext_resource path="res://textures_&_sprites/happy_powerup_big.png" type="Texture" id=3]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 1840, 0.015625, 0, 0, 0, 0, -40, 0.0234375 )
}

[sub_resource type="CircleShape2D" id=2]
radius = 54.5273

[sub_resource type="Curve2D" id=3]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -0.0078125, -100, 0, -99.2613, 0, 99.2613, -99.9922, -0.0078125, 0, 0, 0, 0, -0.015625, 100.008, 0, 99.8409, 0, -99.8409, 100, 0, 0, 0, 0, 0, -0.00311279, -99.9315, 0, 0, 0, 0, -0.0078125, -100 )
}

[node name="Powerup" type="Node2D"]
position = Vector2( 0.00431633, -0.0102844 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( -0.1, 0.1 )
texture = ExtResource( 3 )

[node name="PrePath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="PreFollow" type="PathFollow2D" parent="PrePath"]
position = Vector2( 1840, 0.015625 )
rotation = 3.14159

[node name="Bubble" type="Sprite" parent="."]
scale = Vector2( -0.1, 0.1 )
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="Bubble" groups=[
"Powerups",
]]
scale = Vector2( 5, 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bubble/Area2D"]
shape = SubResource( 2 )

[node name="PostPath" type="Path2D" parent="."]
scale = Vector2( 1.1, 1.1 )
curve = SubResource( 3 )

[node name="PostFollow" type="PathFollow2D" parent="PostPath"]
position = Vector2( -0.0078125, -100 )
rotation = 3.08924
[connection signal="area_shape_entered" from="Bubble/Area2D" to="." method="_on_self_entered"]
